2023 day6 solved via Brutefroce